@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.proteinqc.Manager" >
-        <property name="version" value="Protein QC Pipeline   -- build Feb 04 2022" />
+        <property name="version" value="Protein QC Pipeline   -- build Apr 06 2022" />
     </bean>
 
 </beans>
