@@ -1,3 +1,6 @@
+Apr 06, 2022
+  tuned up logging
+
 Feb 04, 2022
   updated log4j to avoid zero day exploit
 
